<resources>
    <string name="app_name">Whathe Weather</string>
    <string name="gps">Gps</string>
    <!--Shared Preference-->
    <string name="saved_latitude">Saved Latitude</string>
    <string name="saved_longitude">Saved Longitude</string>
    <string name="saved_permission">Saved Permission</string>
    <string name="saved_temp_unit">Saved Temp Unit</string>
    <string name="saved_theme">Saved Theme</string>

    <string name="empty_text_view">Oops, there is no result to display</string>
    <string name="error_text_view">Oops, there was an error fetching the data\nPlease turn on location or network if is not turn on</string>
    <string name="empty_weekly_alert">Oops, there is no forecast to display</string>
    <string name="error_weekly_alert">Oops, there was an error fetching the data</string>
    <string name="empty_button">Check again</string>
    <string name="error_button">Try again</string>
    <string name="pick_location_button">Pick Location</string>
    <string name="show_weekly_forecast">Show Weekly Forecast</string>

    <string name="humidity">HUMIDITY</string>
    <string name="pressure">PRESSURE</string>
    <string name="wind">WIND</string>
    <string name="cloud">CLOUDINESS</string>
    <string name="details">Details</string>
    <string name="sunset">SUNSET</string>
    <string name="sunrise">SUNRISE</string>

    <string name="placeholder_weather_desc">No Weather</string>
    <string name="placeholder_temp">0°</string>
    <string name="placeholder_temp_min">▼ 0°</string>
    <string name="placeholder_temp_max">▼ 0°</string>
    <string name="placeholder_wind">0 m/s</string>
    <string name="placeholder_pressure">0 hPa</string>
    <string name="placeholder_humidity">0 %</string>
    <string name="placeholder_cloud">0 %</string>
    <string name="placeholder_sunrise">5 am</string>
    <string name="placeholder_sunset">5 pm</string>
    <string name="placeholder_location">No Location</string>
    <string name="placeholder_address">No Address</string>

    <string name="notice_use_last_location">Using Last Location</string>
    <string name="notice_asking_enable_location_permission">Please Enable Location Permission</string>
    <string name="notice_enable_location_permission">Enable</string>
    <string name="notice_error_enable_location">Some Error Occur when Enable Location</string>
    <string name="notice_no_network">No Network</string>

    <string name="settings">Settings</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="celsius">metric</string>
    <string name="select_temp_unit">Select Temperature Unit</string>
    <string name="dark_theme">Dark Mode</string>
    <string name="dark_theme_summary">Enable dark mode throughout the app</string>
    <string name="pref_more_title">More</string>
    <string name="send_feedback">Send feedback</string>
    <string name="send_feedback_summary">Any suggestion to make this app better</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="open_source_licenses_summary">License details for open source software</string>
    <string name="about">About</string>
    <string name="about_summary">Information about this app</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="rate_this_app_summary">Please take a moment to rate this app</string>

    <string name="feedback">Feedback</string>
    <string name="send">Send</string>
    <string name="label_from">From:</string>
    <string name="txt_from">sample@example.com</string>
    <string name="label_about">I\'m telling you about</string>
    <string name="hint_feedback">Write your Description</string>
    <string name="feedback_description">By sending us some feedback and thoughts about our app can help us improve the app and continue building a better experience or app for you.</string>
    <string name="label_progress_dialog">Sending</string>
    <string-array name="feedback_about">
        <item>request</item>
        <item>issue</item>
    </string-array>
</resources>
