<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/saved_temp_unit"
        android:title="@string/temperature_unit"
        android:dialogTitle="@string/select_temp_unit"
        android:entries="@array/temp_unit"
        android:entryValues="@array/temp_unit_values"
        android:defaultValue="@string/celsius" />

    <PreferenceCategory android:title="@string/pref_about_title">
        <Preference
            android:title="@string/send_feedback"
            android:summary="@string/send_feedback_summary"/>
        <Preference
            android:title="@string/open_source_licenses"
            android:summary="@string/open_source_licenses_summary"/>
        <Preference
            android:title="@string/app_version"
            android:summary="@string/app_version_summary"/>
        <Preference
            android:title="@string/rate_this_app"
            android:summary="@string/rate_this_app_summary"/>
    </PreferenceCategory>

</PreferenceScreen>