<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/weather_icon_image_view"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/wi_sunny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/weather_desc_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/placeholder_weather_desc"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toStartOf="@+id/weather_icon_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="24dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_desc_text_view"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8">

            <TextView
                android:id="@+id/temp_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_temp"
                android:textColor="@android:color/black"
                android:textSize="80sp"
                app:fontFamily="monospace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/min_temp_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_temp_min"
                android:textSize="18sp"
                app:fontFamily="monospace"
                app:layout_constraintStart_toStartOf="@+id/temp_text_view"
                app:layout_constraintTop_toBottomOf="@+id/temp_text_view" />

            <TextView
                android:id="@+id/max_temp_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/placeholder_temp_max"
                android:textSize="18sp"
                app:fontFamily="monospace"
                app:layout_constraintStart_toEndOf="@+id/min_temp_text_view"
                app:layout_constraintTop_toBottomOf="@+id/temp_text_view" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/details"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:fontFamily="monospace"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details" />

            <TextView
                android:id="@+id/wind_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                app:fontFamily="monospace"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/pressure_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                app:fontFamily="monospace"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wind_label" />

            <TextView
                android:id="@+id/humidity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                app:fontFamily="monospace"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pressure_label" />

            <TextView
                android:id="@+id/cloud_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloud"
                app:fontFamily="monospace"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/humidity_label" />

            <TextView
                android:id="@+id/sunrise_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunset"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sunset_label" />

            <TextView
                android:id="@+id/sunset_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunrise"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cloud_label" />

            <TextView
                android:id="@+id/wind_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_wind"
                app:fontFamily="monospace"
                app:layout_constraintStart_toStartOf="@+id/pressure_text_view"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/pressure_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_pressure"
                app:fontFamily="monospace"
                app:layout_constraintStart_toStartOf="@+id/humidity_text_view"
                app:layout_constraintTop_toBottomOf="@+id/wind_text_view" />

            <TextView
                android:id="@+id/humidity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_humidity"
                app:fontFamily="monospace"
                app:layout_constraintStart_toStartOf="@+id/cloud_text_view"
                app:layout_constraintTop_toBottomOf="@+id/pressure_text_view" />

            <TextView
                android:id="@+id/cloud_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_cloud"
                app:fontFamily="monospace"
                app:layout_constraintStart_toStartOf="@+id/sunrise_text_view"
                app:layout_constraintTop_toBottomOf="@+id/humidity_text_view" />

            <TextView
                android:id="@+id/sunrise_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_sunrise"
                app:layout_constraintStart_toStartOf="@+id/sunset_text_view"
                app:layout_constraintTop_toBottomOf="@+id/cloud_text_view" />

            <TextView
                android:id="@+id/sunset_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginStart="48dp"
                android:text="@string/placeholder_sunset"
                app:layout_constraintStart_toEndOf="@+id/cloud_label"
                app:layout_constraintTop_toBottomOf="@+id/sunrise_text_view" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
